Fixed the nav position on small screens

--- a/web/assets/styles/header.css
+++ b/web/assets/styles/header.css
@@ -96,7 +96,7 @@ header {
   }
 
   #master-nav menuitem {
-    width: 33%;
+    width: 50%;
   }
 
   menuitem.mobile-hidden {
